<resources>
    <string name="app_name">蜗牛租客</string>
    <string name="fangshi">方式</string>
    <string name="all_rent">整租</string>
    <string name="harf_rent">合租</string>
    <string name="price">价格</string>
    <string name="house_box">户型</string>
    <string name="pinpai">品牌</string>
    <array name="setting">
        <item>聊天机器人</item>
        <item>反馈建议</item>
        <item>软件评分</item>
        <item>版本更新</item>
        <item>关于我们</item>
    </array>
    <string-array name="calendar_week">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
